2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

The idea is to be able to call parent methods inside redefined children
methods (see NEWS and ticket #65).

	add support for :: construct (ticket #65) 
	* NEWS: add description of recent changes.
	* src/parser/bison/ugrammar.y: add parsing of :: construct.
	* src/parser/bison/utoken.l: add :: token.
	* src/ucommand.cc: add support for simple method call (no uobject, no
        function. Will be done in next commit).
	* src/uvariablename.cc: add doublecolon.
	* src/uvariablename.h: add doublecolon.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

	fix string armor problem (related to ticket #63 
	* src/ustring.cc: add armor() function, with optimization (fastArmor).
	* src/ustring.h: add armor, fastArmor.
	* src/uvalue.cc: use armor in UValue::echo.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

A big change in this commit. The use of 'return' in a function will return and
destroy all commands still in progress in the function. The proper way to exit
a function which should keep running commands (like 'at') is to avoid using
'return' (in fact, the function does not return, since it's still running.
Logical). 

This is new because in C++ this disctinction wouldn't make any sense: there is
no such things as "still running background instructions" and when the end of
the function is reached, it is guaranteed that all instructions within the
function body are terminated, so putting 'return' or not doesn't change anything.
Not in URBI.

The difference is visible only in functions containing 'at' commands for
example:

function f()
{
  at (test) ping;
};

function f2()
{
  at (test) ping;
  return;
}

f2() will kill the 'at', f() will not. This is indeed very useful if the
'return' instruction is conditionned by some test. It has the same effect as a
kind of 'stop function_tag'.

	rewrite return mechanism for functions. 
	* src/parser/bison/ugrammar.y: remove automatic return.